# ai-price-predictor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
tp_client/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tp_client/src/: app.tsx  index.css  main.tsx
tp_client/src/components/cache/: apiCache.ts
tp_client/src/components/charts/: chart.tsx  chartCreation.tsx  chartOption.tsx  chartSeriesUpdater.tsx
tp_client/src/components/drags/: dragSlicer.tsx  x.dragging.tsx  y.dragging.tsx
tp_client/src/components/dropdowns/dd/: chart.dd.tsx  ended.date.dd.tsx  forecast.days.dd.tsx  lang.dd.tsx  started.date.dd.tsx  ticker.dd.tsx
tp_client/src/components/dropdowns/tools/: dropdownOption.tsx  dropdownSlider.tsx  mouseController.tsx
tp_client/src/components/loader/: loader.tsx
tp_client/src/components/pages/: trend.page.tsx
tp_client/src/components/panels/: panel.left.tsx  panel.right.tsx  panel.top.tsx
tp_client/src/components/screens/: screen.left.tsx  screen.tsx  screenSlider.tsx
tp_client/src/components/selectors/: selectors.tsx
tp_client/src/components/toggles/: forecast.toggle.tsx  percent.toggle.tsx
tp_client/src/components/types/: types.tsx
tp_client/src/components/utils/: utilsSlider.tsx
tp_client/src/connections/: api.tsx  socket.tsx
tp_client/src/data/: tickerFormatter.tsx  tickerPoints.tsx  tickerSlider.tsx
tp_client/src/forecast/: forcastFormatter.tsx  forecastSeriesUpdater.tsx  forecastSlider.tsx
tp_client/src/forecast/statistics/: actual.price.stat.tsx  difference.stat.tsx  future.price.stat.tsx  period.stat.tsx  statistics.tsx
tp_client/src/news/: news.data.tsx  news.tsx  newsSlider.tsx  newsUrls.tsx
tp_client/src/providers/: contextCreator.tsx  contextFunction.tsx  provider.tsx
tp_client/src/store/: store.tsx
tp_client/src/styles/: custom-calendar.css  stylebox.tsx  yScrollStyle.tsx
tp_client/src/translations/: translator.tsx
tp_client/src/translations/en/: translation.json
tp_client/src/translations/ru/: translation.json
tp_server/: .gitignore  Dockerfile  conftest.py  pytest.ini  requirements-dev.txt  requirements.txt
tp_server/app/: auth.py  config.py  fallback_data.py  forecast.py  logging_config.py  monitoring.py  news.py  schemas.py  server.py  test_gas_ticker.py  yfinance.py
tp_server/tests/: test_auth.py  test_forecast.py  test_health.py
